# blit

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: doc.yml  readme.yml  rust.yml
aseprite-9slice/: aseprite-9slice.js  aseprite-9slice_bg.wasm  index.html
aseprite-animation/: aseprite-animation.js  aseprite-animation_bg.wasm  index.html
benches/: benchmarks.rs
examples/: README.md  aseprite-animation.rs  aseprite.rs  king-by-buch.json  smiley.rs
examples/aseprite-9slice/: button-9slice.json  main.rs
examples/aseprite-animation/: main.rs
examples/showcase/: main.rs
examples/smiley/: main.rs
run-wasm/: Cargo.toml
showcase/: index.html  showcase.js  showcase_bg.wasm
smiley/: index.html  smiley.js  smiley_bg.wasm
src/: error.rs  geom.rs  lib.rs  slice.rs  view.rs
src/aseprite/: animation.rs  mod.rs  slice9.rs
src/aseprite_feature/: animation.rs  mod.rs  slice9.rs
src/image/: mod.rs
src/image_feature/: mod.rs
src/ops/: mod.rs  uv_offset.rs
tests/: pipeline.rs
