[package]
name = "blit"
version = "0.8.3"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/blit"
readme = "README.md"
description = "Blit sprites on a buffer with a mask"
documentation = "https://docs.rs/blit"

repository = "https://github.com/tversteeg/blit.git"
keywords = ["image", "gamedev", "sprite", "blitting"]
categories = [
	"games",
	"rendering::data-formats",
	"game-engines",
	"multimedia::images",
]

[features]
default = ["image"]
image = ["dep:image"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.189", optional = true, features = ["derive"] }
num-traits = "0.2.17"
thiserror = "1.0.49"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.24.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Only use codecs that actually compile on WASM
image = { version = "0.24.7", optional = true, default-features = false, features = ["png"] }

[dev-dependencies]
serde_json = "1.0.107"
winit = "0.28.7"
log = "0.4.20"
web-time = "0.2.2"
pixels = "0.13.0"
bytemuck = "1.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pollster = "0.3.0"
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_log = { version = "1.0.0", features = ["wasm-bindgen", "color"] }
console_error_panic_hook = "0.1.7"

[[example]]
name = "showcase"
required-features = ["image"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["image"]

[workspace]
members = ["run-wasm"]
