[package]
name = "blit"
version = "0.8.5"
edition = "2021"
authors = ["Thomas Versteeg <t@versteeg.email>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/blit"
readme = "README.md"
description = "Blit sprites on a buffer with a mask"
documentation = "https://docs.rs/blit"

repository = "https://github.com/tversteeg/blit.git"
keywords = ["image", "gamedev", "sprite", "blitting"]
categories = [
	"games",
	"rendering::data-formats",
	"game-engines",
	"multimedia::images",
]

[features]
default = ["image"]
image = ["dep:image"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.200", optional = true, features = ["derive"] }
num-traits = "0.2.18"
thiserror = "1.0.58"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Only use codecs that actually compile on WASM
image = { version = "0.25.0", optional = true, default-features = false, features = ["png"] }

[dev-dependencies]
pixel-game-lib = { version = "0.8", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
codspeed-criterion-compat = "2.4.0"
perfcnt = "0.8.0"

[[example]]
name = "showcase"
required-features = ["image"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["image"]

[workspace]
members = ["run-wasm"]
